# agarios

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  calculations.txt  run.sh  structure.txt
include/agarios/: Blob.h  Bot.h  Camera.h  Game.h  GameConfig.h  GameObject.h  Player.h  QuadTree.h  RigidBody.h  Vector2d.h  window.h
include/agarios/gameObjects/: Blob.h  Food.h  RigidBody.h
include/services/: Console.h  FS.h  Utils.h
lib/SFGUI/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/SFGUI/examples/: Box  Buttons  Canvas  ComboBox  CustomWidget  Desktop  Entry  GuessMyNumber  HelloWorld  Image  Label  Layout  Makefile  Multiview  Notebook  OpenGL  ProgressBar  Range  SFGUI-Test  ScrolledWindowViewport  Signals  SpinButton  Spinner  Table  Window  cmake_install.cmake
lib/json/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonTargets.cmake
resources/: names.json  sfgui.theme
src/: Blob.cpp  Bot.cpp  Camera.cpp  Console.cpp  Game.cpp  GameObject.cpp  Player.cpp  QuadTree.cpp  RigidBody.cpp  Vector2d.cpp  Window.cpp  main.cpp
src/gameObjects/: Blob.cpp  Food.cpp  RigidBody.cpp
src/services/: Console.cpp  FS.cpp  Utils.cpp
tests/: client.cpp  server.cpp
